--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 pandas = "^2.2.1"
 python-dateutil = "^2.9.0.post0"
+requests = "^2.31.0"
+bs4 = "^0.0.2"
+email-validator = "^2.1.1"
 
 
 [build-system]
